--- a/css/banner.css
+++ b/css/banner.css
@@ -17,7 +17,7 @@
  .home-showcase .home-showcaseSlider .swiper-wrapper .swiper-slide .swiper-image {
 	 padding: 0;
 	 width: 100%!important;
-	 height: 1100px;
+	 height: 650px;
 	 background-position: center;
 	 background-repeat: no-repeat;
 	 background-size: cover;
@@ -25,13 +25,16 @@
 	 align-items: flex-end;
      
      h1{
-        font-size: 75px;
+        font-size: 60px;
         font-family: var(--primary-font);
         text-transform: capitalize;
         font-weight: 700;
         color: var(--primary-color);
         width: 45%;
         line-height: 1.3;
+        &.color-white{
+        	color: var(--white-color);
+        }
      }
 }
  .home-showcase .home-showcaseSlider .swiper-pagination {
@@ -74,10 +77,10 @@
    	}
 
    .home-showcase .home-showcaseSlider .swiper-wrapper .swiper-slide .swiper-image {
-		height: 790px;
+		height: 500px;
 		
 		h1{
-		font-size: 60px;
+		font-size: 50px;
 		}
 	}
 }
