--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
     font-family: var(--primary-font);
   }
   .btn-primary{
-    font-size: 27px;
+    font-size: 18px;
     color: var(--white-color);
     background-color: var(--primary-color);
     font-weight: 700;
@@ -35,7 +35,7 @@
 
 
   .btn-outline{
-    font-size: 27px;
+    font-size: 18px;
     color: var(--secondary-color);
     background-color: transparent;
     font-weight: 700;
@@ -65,9 +65,9 @@
     text-transform: uppercase;
     a{
       color: var(--black-color)!important;
-      font-size: 18px;
+      font-size: 16px;
       letter-spacing: 2px;
-      margin-left: 60px;
+      margin-left: 40px;
       position: relative;
       padding-left: 0!important;
       padding-right: 0!important;
@@ -116,7 +116,7 @@
     }
   }
   .container{
-    max-width: 1540px;
+    max-width: 1440px;
   }
 
   @media (max-width: 1600px) {
@@ -133,7 +133,7 @@
     padding-bottom: 120px;
   }
   .key-services h3{
-    font-size: 30px;
+    font-size: 24px;
     color: var(--dark-gray);
     text-align: center;
     width: 65%;
@@ -152,14 +152,14 @@
     padding: 40px;
   }
   .key-services .key-services-box .content h5{
-    font-size: 35px;
+    font-size: 26px;
     font-weight: 700;
     color: var(--white-color);
     font-family: var(--primary-font);
     margin-bottom: 15px;
   }
   .key-services .key-services-box .content p{
-    font-size: 27px;
+    font-size: 18px;
     color: var(--white-color);
     margin-bottom: 0;
     font-family: var(--primary-font);
@@ -194,10 +194,10 @@
       width: 80%;
     }
     .key-services .key-services-box .content h5{
-      font-size: 27px;
+      font-size: 24px;
     }
     .key-services .key-services-box .content{
-      min-height: 290px;
+      min-height: 210px;
     }
   }
 
@@ -207,7 +207,7 @@
     }
     .key-services h3{
       width: 100%;
-      font-size: 27px;
+      font-size: 20px;
     }
     .key-services .key-services-box .content p{
       font-size: 20px;
@@ -234,7 +234,7 @@
   }
 
   .why-choose-us h1{
-    font-size: 80px;
+    font-size: 60px;
     font-weight: 700;
     color: var(--primary-color);
     margin-bottom: 0;
@@ -249,7 +249,7 @@
     padding: 120px 0;
   }
   .why-choose-us-content h5{
-    font-size: 23px;
+    font-size: 20px;
     color: var(--secondary-color);
     font-weight: 700;
     margin-bottom: 15px;
@@ -267,6 +267,7 @@
   .why-choose-us-box .content{
     padding: 0 20px;
     border-right: 2px solid var(--dark-gray);
+    min-height: 145px;
   }
   .why-choose-us-box:last-child .content{
     border-right: 0;
@@ -275,7 +276,7 @@
     border-right: 0;
   }
   .why-choose-us-box p{
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 400;
     color: var(--dark-gray);
     margin-bottom: 0;
@@ -326,7 +327,7 @@
   }
 
   .customer-talks h2{
-    font-size: 80px;
+    font-size: 50px;
     font-weight: 700;
     color: var(--secondary-color);
     margin-bottom: 70px;
@@ -350,7 +351,7 @@
   }
   .customer-talks .testimonial-wrap .testimonial-box p{
     margin-bottom: 0;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 400;
     color: var(--white-color);
   }
@@ -363,13 +364,13 @@
 
   @media (max-width: 1400px) {
     .customer-talks{
-      height: 860px;
+      height: 600px;
     }
     .customer-talks .testimonial-wrap .testimonial-box{
       padding: 40px;
     }
     .customer-talks h2{
-      font-size: 65px;
+      font-size: 50px;
     }
   }
 
@@ -403,20 +404,20 @@
     text-align: center;
   }
   .book-now-block h2{
-    font-size: 80px;
+    font-size: 50px;
     font-weight: 700;
     color: var(--primary-color);
-    margin-bottom: 70px;
+    margin-bottom: 40px;
     text-align: center;
   }
   .book-now-block h5{
     font-weight: 700;
-    font-size: 30px;
+    font-size: 20px;
     color: var(--dark-gray);
     margin-bottom: 20px;
   }
   .book-now-block  p{
-    font-size: 30px;
+    font-size: 16px;
     color: var(--dark-gray);
     font-weight: 400;
     width: 70%;
@@ -432,10 +433,10 @@
 
   @media (max-width: 1400px) {
     .book-now-block h2{
-      font-size: 65px;
+      font-size: 55px;
     }
     .book-now-block  p{
-      font-size: 27px;
+      font-size: 16px;
       width: 80%;
     }
   }
@@ -448,10 +449,10 @@
     }
     .book-now-block h5 {
       font-weight: 700;
-      font-size: 27px;
+      font-size: 20px;
     }
     .book-now-block p {
-      font-size: 20px;
+      font-size: 16px;
       width: 100%;
     }
   }
@@ -459,8 +460,11 @@
 
   /* FOOTER */
   footer{
-    background-color: var(--dark-gray);
-    padding: 120px 0;
+    padding: 120px 0 30px;
+    background-image: url(../images/footer-bg.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: top;
   }
   .footer-wrap{
     display: flex;
@@ -478,7 +482,7 @@
   } */
 
   .footer-logo-wrap p{
-    font-size: 20px;
+    font-size: 16px;
     color: var(--white-color);
     margin-top: 30px;
   }
@@ -496,9 +500,10 @@
     margin-bottom: 15px;
   }
   .footer-links ul li a{
-    font-size: 24px;
+    font-size: 16px;
     color: var(--white-color);
     opacity: 0.7;
+    font-weight: 600;
   }
   .footer-links ul li a:hover{
     color: var(--secondary-color);
@@ -534,7 +539,7 @@
       padding-right: 60px;
     }
     .footer-links ul li a{
-      font-size: 20px;
+      font-size: 16px;
     }
   }
 
@@ -559,7 +564,7 @@
       padding-left: 0;
     }
     footer{
-      padding: 60px 0;
+      padding: 140px 0 60px;
     }
     .footer-logo-wrap img{
       width: 150px;
@@ -571,9 +576,77 @@
 
 
 
+.floating-whatsapp{
+  position: fixed;
+  bottom: 20%;
+  right: 30px;
+  z-index: 999;
+}
 
 
 
+.floating-whatsapp img{
+  width: 70px;
+  }
+.floating-support{
+  position: fixed;
+  bottom: 10%;
+  right: 35px;
+  z-index: 999;
+  border-radius: 50%;
+  background-color: var(--primary-color);
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.floating-support img{
+  width: 50px;
+  border-radius: 50%;
+}
 
 
-  
+  @media (max-width: 767px) {
+.floating-support{
+  display: none;
+}
+.floating-whatsapp{
+  display: none;
+  }}
+
+
+.floating-btn-wrap{
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  left: 0;
+  display: flex;
+  z-index: 999;
+  display: none;
+}
+
+.floating-btn-wrap a{
+  font-size: 14px;
+  padding: 10px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: block;
+}
+.floating-btn-wrap a:first-child{
+  background-color: var(--primary-color);
+  width: 50%;
+  color: var(--white-color);
+}
+.floating-btn-wrap a:last-child{
+  background-color: var(--secondary-color);
+  width: 50%;
+  color: var(--black-color);
+}
+
+  @media (max-width: 767px) {
+    .floating-btn-wrap{
+      display: flex;
+    }
+  }
