--- a/css/banner.css
+++ b/css/banner.css
@@ -36,6 +36,7 @@
         	color: var(--white-color);
         }
      }
+	 
 }
  .home-showcase .home-showcaseSlider .swiper-pagination {
 	 position: relative;
@@ -116,6 +117,11 @@
 	}
 }
  
+@media (max-width: 1440px) {
+	.home-showcase .home-showcaseSlider .swiper-wrapper .swiper-slide .swiper-image h1{
+		font-size: 50px;
+	}
+}
 
 
 @media (max-width: 1200px) {
@@ -138,7 +144,7 @@
 		text-align: center;
 	}
 	.home-showcase .home-showcaseSlider .swiper-wrapper .swiper-slide .swiper-image h1{
-		font-size: 35px;
+		font-size: 27px;
 		color: #fff;
 		width: 100%;
 	}
