--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,16 @@
       }
     }
   }
-
+  .navbar-light .navbar-brand img{
+    width: 150px;
+  }
+  .nav-item.active a{
+    color: var(--primary-color)!important;
+  }
+  .nav-item.active a::after{
+    color: var(--primary-color);
+    transform: scaleX(1);
+  }
   @media (max-width: 767px) {
     .navbar-light .navbar-brand img{
       width: 140px;
@@ -133,7 +142,7 @@
     padding-bottom: 120px;
   }
   .key-services h3{
-    font-size: 24px;
+    font-size: 20px;
     color: var(--dark-gray);
     text-align: center;
     width: 65%;
@@ -143,6 +152,8 @@
   }
   .key-services img{
     width: 100%;
+    height: 200px;
+  object-fit: cover;
   }
   .key-services .key-services-box{
     background-color: var(--primary-color);
@@ -255,6 +266,11 @@
   .why-choose-us-content{
     padding: 120px 0;
   }
+  @media (max-width: 1400px) {
+    .why-choose-us-content{
+      padding: 60px 0;
+    }
+  }
   .why-choose-us-content h5{
     font-size: 20px;
     color: var(--secondary-color);
@@ -349,6 +365,7 @@
   .customer-talks .testimonial-wrap{
     display: flex;
     justify-content: space-between;
+    padding-top: 25px;
   }
   .customer-talks .testimonial-wrap .testimonial-box img{
     position: absolute;
@@ -359,7 +376,7 @@
     padding: 60px;
     border: 4px dashed var(--white-color);
     border-radius: 20px;
-    width: 30%;
+    /* width: 30%; */
     position: relative;
   }
   .customer-talks .testimonial-wrap .testimonial-box p{
@@ -415,6 +432,11 @@
   .book-now-block{
     padding: 120px 0;
     text-align: center;
+  }
+  @media (max-width: 1400px) {
+    .book-now-block{
+      padding: 60px 0;
+    }
   }
   .book-now-block h2{
     font-size: 50px;
@@ -478,6 +500,11 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top;
+  }
+  @media (max-width: 1400px) {
+    footer{
+      padding: 60px 0 30px;
+    }
   }
   .footer-wrap{
     display: flex;
