--- a/css/style.css
+++ b/css/style.css
@@ -152,8 +152,6 @@
   }
   .key-services img{
     width: 100%;
-    height: 200px;
-  object-fit: cover;
   }
   .key-services .key-services-box{
     background-color: var(--primary-color);
@@ -229,6 +227,30 @@
     .key-services .key-services-box .content {
       min-height: 200px;
     }
+    .swiper-button-next{
+      display: none;
+    }
+    .swiper-button-prev{
+      display: none;
+    }
+    .key-services .swiper-wrapper{
+padding-bottom: 40px;
+}
+.key-services .swiper-pagination-bullet-active{
+        background-color: var(--primary-color)!important;
+        width: 12px;
+        height: 12px;
+      }
+.key-services .swiper-pagination-bullet{
+        width: 10px;
+        height: 10px;
+        color: #5e5e5e;
+        opacity: 1;
+      }
+    .key-services  .swiper-pagination{
+      bottom: -5px!important;
+    }
+
   }
 
   /* why  choos us */
@@ -339,6 +361,7 @@
     }
     .why-choose-us-box .content{
       border-right: 0;
+      min-height: auto;
     }
   }
 
@@ -415,17 +438,34 @@
     .testimonial-wrap{
       flex-direction: row;
       gap: 20px;
-      overflow: auto;
+/*      overflow: auto;*/
       padding: 40px 10px;
     }
     .customer-talks .testimonial-wrap .testimonial-box{
-      width: 90%;
-      min-width: 90%;
+      width: 100%;
+      min-width: 100%;
       padding: 30px 20px;
     }
     .customer-talks .testimonial-wrap .testimonial-box p{
       font-size: 18px;
     }
+
+.customer-talks .swiper-pagination-bullet-active{
+        background-color: var(--white-color)!important;
+        width: 12px;
+        height: 12px;
+      }
+.customer-talks .swiper-pagination-bullet{
+        width: 10px;
+        height: 10px;
+        color: #5e5e5e;
+        opacity: 1;
+      }
+    .customer-talks  .swiper-pagination{
+      bottom: -5px!important;
+    }
+
+  }
   }
 
   /* book-now-block */
@@ -658,16 +698,39 @@
   }
 .floating-support{
   position: fixed;
-  bottom: 10%;
-  right: 35px;
+  bottom: 50%;
+  right: -50px;
   z-index: 999;
-  border-radius: 50%;
-  background-color: var(--primary-color);
-  width: 60px;
+  border-radius: 0%;
+  background-color: var(--secondary-color);
+  width: auto;
   height: 60px;
   display: flex;
   align-items: center;
   justify-content: center;
+  padding:  0 35px;
+  color: #000!important;
+  transform: rotate(90deg);
+  transition:0.3s;
+  border-radius: 0px 0px 10px 10px;
+
+  a{
+    color: #000!important;
+    font-weight: 700;
+  }
+}
+.floating-support:hover{
+  background-color: var(--primary-color);
+  right: -45px;
+}
+
+.floating-support:hover a{
+  color: var(--white-color)!important;
+  text-decoration: none!important;
+}
+
+.floating-support a:hover{
+  text-transform: none;
 }
 
 .floating-support img{
@@ -718,3 +781,119 @@
       display: flex;
     }
   }
+
+
+
+
+  .calendar {
+  padding:8px;
+  background: #ffffff;
+  border-radius: 4px;
+/*  font-size:18px;*/
+/*  border: 1px solid #333333;*/
+/*  box-shadow: 0px 20px 40px rgba(59,60,56,0.05);*/
+}
+.ui-datepicker {
+  background: #ffffff;
+  border-radius: 15px;
+}
+.ui-datepicker-header {
+  height: 50px;
+  line-height: 50px;
+  color: #ffffff;
+  background: var(--primary-color);
+  margin-bottom: 10px;
+}
+.ui-datepicker-prev,
+.ui-datepicker-next {
+  width: 20px;
+  height: 20px;
+  text-indent: 9999px;
+  border-radius: 100%;
+  cursor: pointer;
+  overflow: hidden;
+  margin-top: 12px;
+}
+.ui-datepicker-prev {
+  float: left;
+  margin-left: 12px;
+}
+.ui-datepicker-prev:after {
+  transform: rotate(45deg);
+  margin: -43px 0px 0px 8px;
+}
+.ui-datepicker-next {
+  float: right;
+  margin-right: 12px;
+}
+.ui-datepicker-next:after {
+  transform: rotate(-135deg);
+  margin: -43px 0px 0px 6px;
+}
+.ui-datepicker-prev:after,
+.ui-datepicker-next:after {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 8px;
+  height: 8px;
+  border-left: 2px solid #ffffff;
+  border-bottom: 2px solid #ffffff;
+}
+.ui-datepicker-prev:hover,
+.ui-datepicker-next:hover,
+.ui-datepicker-prev:hover:after,
+.ui-datepicker-next:hover:after {
+  border-color: #333333;
+}
+.ui-datepicker-title {
+  text-align: center;
+  font-size:25px;
+}
+.ui-datepicker-calendar {
+  width: 100%;
+  text-align: center;
+}
+.ui-datepicker-calendar thead tr th span {
+  display: block;
+  width: 40px;
+  color: var(--primary-color);
+  margin-bottom: 5px;
+  font-size: 18px;
+}
+.ui-state-default {
+  display: block;
+  text-decoration: none;
+  color: #333333;
+  line-height: 40px;
+  font-size: 16px;
+}
+.ui-state-default:hover {
+  color: #ffffff;
+  background:var(--primary-color);
+  border-radius:50px;
+  transition: all 0.25s cubic-bezier(0.7, -0.12, 0.2, 1.12);
+}
+.ui-state-highlight {
+  color: #ffffff;
+  background-color:var(--primary-color);
+  border-radius:50px;
+}
+}
+.ui-state-active {
+  color: #ffffff;
+  background-color:var(--primary-color);
+  border-radius:50px;
+}
+.ui-datepicker-unselectable .ui-state-default {
+  color: #eee;
+  border: 2px solid transparent;
+}
+
+.icon {
+    margin-left: -30px;
+    margin-top: -26px;
+    position: relative;
+    color: var(--primary-color);
+    font-size:20px;
+}
